adding plant names

--- a/fruit-veg-herbs.qmd
+++ b/fruit-veg-herbs.qmd
@@ -1,2 +1,61 @@
 # Fruits, vegatables and herbs
 
+## Apples
+
+## Bay
+
+## Carrots
+
+## Chillis
+
+## Chives
+
+## Courgette
+
+## Cucumber
+
+## Dill
+
+## Fennel
+
+## Garlic
+
+## Grapes
+
+## Green beans
+
+## Jaman
+
+## Lavendar
+
+## Lemon Mint
+
+## Mint
+
+## Oregano
+
+## Parsley
+
+## Pear
+
+## Peppers
+
+## Plums
+
+## Potatoes
+
+## Raspberries
+
+## Rosemary
+
+## Sage
+
+## Spinach
+
+## Spring onions
+
+## Strawberries
+
+## Tomatoes
+
+## Thyme
