--- a/indoor.qmd
+++ b/indoor.qmd
@@ -1,1 +1,45 @@
 # Indoor plants
+
+## Aloe
+
+## Anthurium Andraeanum 
+
+## Araceae, Dieffenbachia
+
+## Asparagus Fern, Asparagu Densiflorus
+
+## Aspidistra
+
+## Cacti
+
+## Christmas cactus
+
+## Cyclamen
+
+## Dypsis Lutescens
+
+## Ficus Benjamina
+
+## Ficus Elastica Robusta
+
+## Geranium
+
+## Kalanchoe Blossfedliana
+
+## Lily
+
+## Maidenhair fern
+
+## Moth Orchid
+
+## Peace lily
+
+## Spider plant
+
+## Tradescantia Spathacea 'Sitara'
+
+## Tradescantia Zebrina
+
+
+
+
