--- a/outdoor.qmd
+++ b/outdoor.qmd
@@ -1,2 +1,71 @@
 # Outdoor plants
 
+## Acorus gramineus 'Variegatus' variegated dwarf rush
+
+## Ajuga
+
+## Bluebells
+
+## Broad-leafed Dock
+
+## Buddleja
+
+## Campion
+
+## Clematis
+
+## Cowslip
+
+## Crocosmia
+
+## Dahlia
+
+## Dianthus plumaris
+
+## Forget-me-nots
+
+## Foxglove
+
+## Geranium maculatum
+
+## Geranium Cranesbill
+
+## Ground Elder
+
+## Honeysuckle
+
+## Hops
+
+## Japenese quince
+
+## Lobelia
+
+## Orpine or stonecrop
+
+## Peonies
+
+## Red-flowering currant
+
+## Red valerian - herb?
+
+## Roses
+
+## Rudbeckia
+
+## Snapdragon
+
+## Snowdrops
+
+## Stevia - herb?
+
+## Summer snowflake, Gratiola officinalis 
+
+## Sunflower
+
+## Sweet pea Lathyrus Odaratus
+
+## Tutsan
+
+## Water starwort
+
+
