adding some info

--- a/fruit-veg-herbs.qmd
+++ b/fruit-veg-herbs.qmd
@@ -6,15 +6,40 @@
 
 ## Carrots
 
+- Sow March to July
+- 20cm apart
+
 ## Chillis
 
 ## Chives
 
+- Sow March-May
+
+## Coriander
+
+- Sow indoors anytime
+- When large enough to handle, thin to 20cm apart
+- To harvest, take a few leaves from each plant
+
 ## Courgette
+
+https://www.rhs.org.uk/vegetables/courgettes/grow-your-own
+
+- Best started indoors, because slugs and snails
+- Sow the seeds individually on their side, 13mm (½in) deep, in 7.5cm (3in) pots of moist seed compost. Then place in a heated propagator, greenhouse or on a sunny windowsill enclosed in a clear polythene bag. 
+- Need 18–21°C to germinate.
+- Once seedlings appear, take the pots out of the propagator or remove the bag.
+- Plant out in early summer after hardening off, with general purpose fertiliser such as Vitax Q4 over the compost
+- In containers at least 45cm wide or in ground spaced 90cm apart
+- Thirsty plants
+- Feed every 10-14 days with high potash liquid fertiliser once first fruits start to swell
 
 ## Cucumber
 
 ## Dill
+
+- Sow March-May
+- Do not grow near fennel
 
 ## Fennel
 
@@ -24,13 +49,22 @@
 
 ## Green beans
 
+- Sow in mid-April
+
 ## Jaman
 
 ## Lavendar
 
 ## Lemon Mint
 
+## Lettuce
+
+- Sow March to July
+- 20cm apart
+
 ## Mint
+
+- Sow Feb - May
 
 ## Oregano
 
@@ -40,15 +74,34 @@
 
 ## Peppers
 
+https://www.rhs.org.uk/vegetables/peppers/grow-your-own
+
+- Sow indoors in mid Feb or early March
+- Need 18-21 degrees to germinate
+- Once seedlings appear, keep at 16-18 degrees in bright light and water regularly
+- When they have two true leaves, move into own 7.5-9cm pot
+- Plant into final container in mid-May in an unheated greenhouse, at least 30cm wide
+- Feed once a week with high-potassium liquid fertiliser once flowering starts
+- Keep soil evenly moist
+- When reach about 30cm tall, pinch main stem(s)
+- Harvest mid-summer into autumn
+
 ## Plums
 
 ## Potatoes
 
 ## Raspberries
 
+## Rocket
+
+- Sow March to July
+- 20cm apart
+
 ## Rosemary
 
 ## Sage
+
+- Sow March-May
 
 ## Spinach
 
@@ -58,4 +111,14 @@
 
 ## Tomatoes
 
+- Sow Feb - Apr, 15-20 degrees
+- Transplant when large enough to handle
+- Plant out in 30cm pots
+- Feed once flowers form
+
 ## Thyme
+
+- Sow indoors Feb - May
+- When large enough to handle move into individual pots
+- In May - July plant outside
+- Cut off flowering shoots for best flavour
