--- a/outdoor.qmd
+++ b/outdoor.qmd
@@ -40,6 +40,13 @@
 
 ## Lobelia
 
+https://www.rhs.org.uk/plants/142728/lobelia-erinus/details
+
+- Sow seeds in late winter at 13-18 degrees
+- Grow in deep, fertile, reliably moist soil in full sun or partial shade. 
+- Apply a balanced fertilizer every two weeks during spring and early summer and a nitrogen-free fertilizer every two weeks from mid-summer onwards
+- No pruning require
+
 ## Orpine or stonecrop
 
 ## Peonies
