adding some notes

--- a/indoor.qmd
+++ b/indoor.qmd
@@ -2,44 +2,95 @@
 
 ## Aloe
 
+- Doesn't like lots of light
+- Had lots of pups and started to tip over, so replanted and split up early 2025
+
 ## Anthurium Andraeanum 
+
+- Doesn't like lots of light, but also doesn't like too little
+- Keep an eye on water and light levels in summer
+- Not many flowers in 2024 - maybe due to light and water? Or needs feeding?
 
 ## Araceae, Dieffenbachia
 
+- Likes the light in the bathroom
+
 ## Asparagus Fern, Asparagu Densiflorus
+
+- Likes the light in the ensuite
+- Has grown quite tall
 
 ## Aspidistra
 
+- Not sure if happy, has lost two out of 6 leaves, but seems ok now
+- Keep an eye on it, maybe needs more or less light
+
 ## Cacti
+
+- Seem fine, don't like lots of light though
 
 ## Christmas cactus
 
+- Given in 2024 as two tiny stumps, hoping to revive in 2025
+
 ## Cyclamen
+
+- Died in 2024
 
 ## Dypsis Lutescens
 
+- Seems to be happy where it is - not a lot of light, but some and often
+
 ## Ficus Benjamina
+
+- Very happy
 
 ## Ficus Elastica Robusta
 
+- Very happy
+
 ## Geranium
+
+- Very happy
+- Given in 2024, has grown really big and strong
 
 ## Kalanchoe Blossfedliana
 
+- Was unhappy and bugged in 2024, so quarantined and then split into three smaller plants
+
 ## Lily
+
+- Don't overwater because soil goes mouldy
 
 ## Maidenhair fern
 
+- Given in 2024 as almost dead, hoping to revive
+- Likes humid conditions so is in ensuite
+
 ## Moth Orchid
+
+- In ensuite for humidity
+- Leaves seem happy, hoping to flower again
 
 ## Peace lily
 
+- Likes the indirect light
+- Likes lots of water
+
 ## Spider plant
+
+- Seems to be ok
+- Needs repotting every couple years, to refresh
 
 ## Tradescantia Spathacea 'Sitara'
 
+- Cannot kill this one
+- Just grows and grows
+- Needs light to get purple, but not too much because then browns
+
 ## Tradescantia Zebrina
 
-
+- Needs light to get purple, but not too much because then browns
+- Find the strong but filtered bathroom light is enough
 
 
