--- a/outdoor.qmd
+++ b/outdoor.qmd
@@ -6,9 +6,13 @@
 
 ## Bluebells
 
+- Start to sprout in Feb, but flowers not until much later
+
 ## Broad-leafed Dock
 
 ## Buddleja
+
+- Should cut back in autumn
 
 ## Campion
 
@@ -19,6 +23,9 @@
 ## Crocosmia
 
 ## Dahlia
+
+- Lift once leaves start to blacken and before frosts
+- Clean and leave in dry, cool/warm place - storage cupboard is ideal
 
 ## Dianthus plumaris
 
@@ -40,7 +47,7 @@
 
 ## Lobelia
 
-https://www.rhs.org.uk/plants/142728/lobelia-erinus/details
+(RHS)[https://www.rhs.org.uk/plants/142728/lobelia-erinus/details]
 
 - Sow seeds in late winter at 13-18 degrees
 - Grow in deep, fertile, reliably moist soil in full sun or partial shade. 
@@ -63,6 +70,9 @@ https://www.rhs.org.uk/plants/142728/lobelia-erinus/details
 
 ## Snowdrops
 
+- Come up in Jan
+- Can lift and divide bulbs after flowering
+
 ## Stevia - herb?
 
 ## Summer snowflake, Gratiola officinalis 
@@ -70,6 +80,10 @@ https://www.rhs.org.uk/plants/142728/lobelia-erinus/details
 ## Sunflower
 
 ## Sweet pea Lathyrus Odaratus
+
+- Collect seeds once pods have gone papery brown
+- Dry pods out until splits, then dry seeds out and pack away
+- Soak 24 hours in warm water before sowing in Feb
 
 ## Tutsan
 
