--- a/fruit-veg-herbs.qmd
+++ b/fruit-veg-herbs.qmd
@@ -2,18 +2,34 @@
 
 ## Apples
 
+- Tree in garden
+- Got 3 or 4 apples in 2024
+- Left alone
+
+## Blackcurrant sage
+
+- Given cutting Dec 2024
+- Seems to be growing indoors ok
+
 ## Bay
+
+- Got really big tree in garden and left alone in 2024
+- See how to get a successful cutting
 
 ## Carrots
 
 - Sow March to July
 - 20cm apart
+- In 2023 and 2024, ended up with very small and few carrots
 
-## Chillis
+## Chillies
+
+- Planted in 2024 and still have 3 plants, seem to be doing ok
 
 ## Chives
 
-- Sow March-May
+- Sow March - May
+- Previous attempts failed, have one bought one and kept over winter - aim is to move outside
 
 ## Coriander
 
@@ -23,7 +39,7 @@
 
 ## Courgette
 
-https://www.rhs.org.uk/vegetables/courgettes/grow-your-own
+(RHS)[https://www.rhs.org.uk/vegetables/courgettes/grow-your-ow]n
 
 - Best started indoors, because slugs and snails
 - Sow the seeds individually on their side, 13mm (½in) deep, in 7.5cm (3in) pots of moist seed compost. Then place in a heated propagator, greenhouse or on a sunny windowsill enclosed in a clear polythene bag. 
@@ -36,31 +52,57 @@ https://www.rhs.org.uk/vegetables/courgettes/grow-your-own
 
 ## Cucumber
 
+- Given a plant and grew indoors in 2024
+- Biggish pot
+- Got a few fruits 15cm long
+- Grew tall
+- Pinched out to encourage bushier
+
 ## Dill
 
-- Sow March-May
+- Sow March - May
 - Do not grow near fennel
-
-## Fennel
 
 ## Garlic
 
+- Have in past planted a clove or two and used the sprouts like chives
+
 ## Grapes
+
+- Vine in garden
+- Got lots of bunches in 2024, but small and sour
+- Left mostly alone, a little pruning / cutting back because grew a lot and everywhere
+- Next time - thin grapes, so can grow bigger and hopefully sweeter?
 
 ## Green beans
 
 - Sow in mid-April
+- Planted 6 in raised bed in 2024
+- Got lots of beans, grew very tall
+- Next time - Fewer plants and bigger sticks
 
 ## Jaman
 
+- Gran gave a pot in autumn 2024
+- Grows well in kitchen
+- Makes tasty pakora
+- Seems quite hardy
+
 ## Lavendar
 
+- Got three plants in 2024
+- The two by the door seem to be doing well, but the one in the pot needs more watering
+
 ## Lemon Mint
+
+- Found in garden in 2024
+- Moved to a pot and seems to be doing fine
 
 ## Lettuce
 
 - Sow March to July
 - 20cm apart
+- Most seeds germinate
 
 ## Mint
 
@@ -68,13 +110,21 @@ https://www.rhs.org.uk/vegetables/courgettes/grow-your-own
 
 ## Oregano
 
+- Bush in garden 2024
+- Mostly left alone and seems fine
+
 ## Parsley
+
+- Put one in a pot outside in 2024, seems fine
 
 ## Pear
 
+- Tree in garden
+- Left alone in 2024 and got 2 pears
+
 ## Peppers
 
-https://www.rhs.org.uk/vegetables/peppers/grow-your-own
+(RHS)[https://www.rhs.org.uk/vegetables/peppers/grow-your-own]
 
 - Sow indoors in mid Feb or early March
 - Need 18-21 degrees to germinate
@@ -88,9 +138,20 @@ https://www.rhs.org.uk/vegetables/peppers/grow-your-own
 
 ## Plums
 
+- Tree in garden
+- Got none in 2024
+- Left alone
+
 ## Potatoes
 
+- Threw a sprouting potato in a black bag in summer 2024 and worked well
+- Emptied bag out once flowered / leaves started to turn and got lots of small ones
+
 ## Raspberries
+
+- Loads canes came up in 2024
+- Left alone and got a few handfuls of raspberries
+- Cut some dead canes back in winter, see what happens in 2025
 
 ## Rocket
 
@@ -99,15 +160,25 @@ https://www.rhs.org.uk/vegetables/peppers/grow-your-own
 
 ## Rosemary
 
+- Big bush in garden 2024, left alone
+- Maybe prune back so others can grow?
+
 ## Sage
 
 - Sow March-May
+- Kept some small plants over winter, but see how they do / plant more and move outside
 
 ## Spinach
+
+- Sowed some in 2024, but did not use
 
 ## Spring onions
 
 ## Strawberries
+
+- Got a black bag in 2023
+- Left alone in 2024 and got a few strawberries
+- See how can get more and how to propogate
 
 ## Tomatoes
 
@@ -115,6 +186,7 @@ https://www.rhs.org.uk/vegetables/peppers/grow-your-own
 - Transplant when large enough to handle
 - Plant out in 30cm pots
 - Feed once flowers form
+- Had three plants and got less than 20 tomatoes in 2024, but didn't feed them and maybe didn't water them enough?
 
 ## Thyme
 
