--- a/outdoor.qmd
+++ b/outdoor.qmd
@@ -1,51 +1,51 @@
 # Outdoor plants
 
-## Acorus gramineus 'Variegatus' variegated dwarf rush
+## Acorus gramineus 'Variegatus' variegated dwarf rush {#sec-acorus}
 
-## Ajuga
+## Ajuga {#sec-ajuga}
 
-## Bluebells
+## Bluebells {#sec-bluebell}
 
 - Start to sprout in Feb, but flowers not until much later
 
-## Broad-leafed Dock
+## Broad-leafed Dock {#sec-dock}
 
-## Buddleja
+## Buddleja {#sec-buddleja}
 
 - Should cut back in autumn
 
-## Campion
+## Campion {#sec-campion}
 
-## Clematis
+## Clematis {#sec-clematis}
 
-## Cowslip
+## Cowslip {#sec-cowslip}
 
-## Crocosmia
+## Crocosmia {#sec-crocosmia}
 
-## Dahlia
+## Dahlia {#sec-dahlia}
 
 - Lift once leaves start to blacken and before frosts
 - Clean and leave in dry, cool/warm place - storage cupboard is ideal
 
-## Dianthus plumaris
+## Dianthus plumaris {#sec-dianthus}
 
-## Forget-me-nots
+## Forget-me-nots {#sec-forget}
 
-## Foxglove
+## Foxglove {#sec-foxglove}
 
-## Geranium maculatum
+## Geranium maculatum {#sec-geranium_m}
 
-## Geranium Cranesbill
+## Geranium Cranesbill {#sec-geranium_c}
 
-## Ground Elder
+## Ground Elder {#sec-elder}
 
-## Honeysuckle
+## Honeysuckle {#sec-honeysuckle}
 
-## Hops
+## Hops {#sec-hops}
 
-## Japenese quince
+## Japenese quince {#sec-quince}
 
-## Lobelia
+## Lobelia {#sec-lobelia}
 
 (RHS)[https://www.rhs.org.uk/plants/142728/lobelia-erinus/details]
 
@@ -54,39 +54,39 @@
 - Apply a balanced fertilizer every two weeks during spring and early summer and a nitrogen-free fertilizer every two weeks from mid-summer onwards
 - No pruning require
 
-## Orpine or stonecrop
+## Orpine or stonecrop {#sec-orpine}
 
-## Peonies
+## Peonies {#sec-peony}
 
-## Red-flowering currant
+## Red-flowering currant {#sec-currant}
 
-## Red valerian - herb?
+## Red valerian - herb? {#sec-valerian}
 
-## Roses
+## Roses {#sec-rose}
 
-## Rudbeckia
+## Rudbeckia {#sec-rudbeckia}
 
-## Snapdragon
+## Snapdragon {#sec-snapdragon}
 
-## Snowdrops
+## Snowdrops {#sec-snowdrop}
 
 - Come up in Jan
 - Can lift and divide bulbs after flowering
 
-## Stevia - herb?
+## Stevia - herb? {#sec-stevia}
 
-## Summer snowflake, Gratiola officinalis 
+## Summer snowflake, Gratiola officinalis {#sec-snowflake} 
 
-## Sunflower
+## Sunflower {#sec-sunflower}
 
-## Sweet pea Lathyrus Odaratus
+## Sweet pea Lathyrus Odaratus {#sec-sweetpea}
 
 - Collect seeds once pods have gone papery brown
 - Dry pods out until splits, then dry seeds out and pack away
 - Soak 24 hours in warm water before sowing in Feb
 
-## Tutsan
+## Tutsan {#sec-tutsan}
 
-## Water starwort
+## Water starwort {#sec-starwort}
 
 
