--- a/child-dir/_child-feb.qmd
+++ b/child-dir/_child-feb.qmd
@@ -1,11 +1,25 @@
 ## February
 
-Deadhead 
+### Tasks
 
-  - Orpine @sec-orpine
+:::panel-tabset
 
-Sow
+#### Deadhead 
 
-  - Lobelia @sec-lobelia
-  - Pepper @sec-pepper
-  - Sweetpea @sec-sweetpea
+- @sec-orpine
+
+#### Sow
+
+- @sec-sweetpea
+- @sec-lobelia
+- @sec-pepper
+- @sec-tomato
+- @sec-thyme
+
+:::
+
+### Events
+  
+- @sec-bluebell start to appear
+- @sec-snowdrop are flowering
+- @sec-hellebore are flowering
