--- a/child-dir/_child-mar.qmd
+++ b/child-dir/_child-mar.qmd
@@ -1,1 +1,27 @@
 ## March
+
+### Tasks
+
+:::panel-tabset
+
+### Lift
+
+- @sec-snowdrop
+
+### Sow
+
+- @sec-carrot
+- @sec-chives
+- @sec-courgette
+- @sec-dill
+- @sec-lettuce
+- @sec-mint
+- @sec-pepper
+- @sec-rocket
+- @sec-sage
+- @sec-tomato
+- @sec-thyme
+
+:::
+
+### Events
