--- a/fruit-veg-herbs.qmd
+++ b/fruit-veg-herbs.qmd
@@ -16,7 +16,7 @@
 - Got really big tree in garden and left alone in 2024
 - See how to get a successful cutting
 
-## Carrots {#sec-carrots}
+## Carrots {#sec-carrot}
 
 - Sow March to July
 - 20cm apart
