--- a/outdoor.qmd
+++ b/outdoor.qmd
@@ -22,6 +22,10 @@
 
 ## Crocosmia {#sec-crocosmia}
 
+## Daffodils {#sec-daffodil}
+
+- Lift in autumn
+
 ## Dahlia {#sec-dahlia}
 
 - Lift once leaves start to blacken and before frosts
