--- a/outdoor.qmd
+++ b/outdoor.qmd
@@ -24,12 +24,14 @@
 
 ## Daffodils {#sec-daffodil}
 
-- Lift in autumn
+- Appear late February, flowering through March
+- Lift and divide in autumn
 
 ## Dahlia {#sec-dahlia}
 
-- Lift once leaves start to blacken and before frosts
+- Lift and divide once leaves start to blacken and before frosts
 - Clean and leave in dry, cool/warm place - storage cupboard is ideal
+- Plant once no more frost, late March/April
 
 ## Dianthus plumaris {#sec-dianthus}
 
@@ -44,6 +46,8 @@
 ## Ground Elder {#sec-elder}
 
 ## Hellebore {#sec-hellebore}
+
+- Lift and divide after flowering
 
 ## Honeysuckle {#sec-honeysuckle}
 
@@ -63,10 +67,15 @@
 ## Orpine {#sec-orpine}
 
 - Stonecrop
+- Start to grow again early March
 
 ## Peonies {#sec-peony}
 
+- Start to grow again early March
+
 ## Red-flowering currant {#sec-currant}
+
+- Start to grow again early March
 
 ## Red valerian - herb? {#sec-valerian}
 
