--- a/child-dir/_child-mar.qmd
+++ b/child-dir/_child-mar.qmd
@@ -8,6 +8,7 @@
 
 - Clean and refill water butts
 - From late March can start feeding most houseplants
+- Plant @sec-dahlia
 
 ### Propagate
 
@@ -32,3 +33,4 @@
 ### Events
 
 - @sec-daffodil are flowering
+- @sec-currant starts to flower
