--- a/fruit-veg-herbs.qmd
+++ b/fruit-veg-herbs.qmd
@@ -152,6 +152,7 @@
 - Loads canes came up in 2024
 - Left alone and got a few handfuls of raspberries
 - Cut some dead canes back in winter, see what happens in 2025
+- Started to leaf in March
 
 ## Rocket {#sec-rocket}
 
