--- a/outdoor.qmd
+++ b/outdoor.qmd
@@ -48,6 +48,7 @@
 ## Hellebore {#sec-hellebore}
 
 - Lift and divide after flowering
+- Flowers Jan - early April
 
 ## Honeysuckle {#sec-honeysuckle}
 
@@ -88,7 +89,7 @@
 ## Snowdrops {#sec-snowdrop}
 
 - Come up in Jan
-- Can lift and divide bulbs after flowering
+- Can lift and divide bulbs after flowering, end of March
 
 ## Stevia - herb? {#sec-stevia}
 
