--- a/fruit-veg-herbs.qmd
+++ b/fruit-veg-herbs.qmd
@@ -73,6 +73,8 @@
 - Got lots of bunches in 2024, but small and sour
 - Left mostly alone, a little pruning / cutting back because grew a lot and everywhere
 - Next time - thin grapes, so can grow bigger and hopefully sweeter?
+- Leaves start to appear late April
+- Beginnings of grapes appear May
 
 ## Green beans {#sec-beans}
 
