--- a/outdoor.qmd
+++ b/outdoor.qmd
@@ -6,7 +6,8 @@
 
 ## Bluebells {#sec-bluebell}
 
-- Start to sprout in Feb, but flowers not until much later
+- Start to sprout in Feb
+- Flowers March-April
 
 ## Broad-leafed Dock {#sec-dock}
 
@@ -18,7 +19,11 @@
 
 ## Clematis {#sec-clematis}
 
+- Flowers late April to May
+
 ## Cowslip {#sec-cowslip}
+
+- Flowers late April to early May
 
 ## Crocosmia {#sec-crocosmia}
 
@@ -37,11 +42,15 @@
 
 ## Forget-me-nots {#sec-forget}
 
+- Flowers in April
+
 ## Foxglove {#sec-foxglove}
 
-## Geranium maculatum {#sec-geranium_m}
+## Geranium Maculatum {#sec-geranium_m}
 
 ## Geranium Cranesbill {#sec-geranium_c}
+
+- Flowers late April to early May
 
 ## Ground Elder {#sec-elder}
 
@@ -54,7 +63,11 @@
 
 ## Hops {#sec-hops}
 
+- Appears late April
+
 ## Japenese quince {#sec-quince}
+
+- Flowers in April
 
 ## Lobelia {#sec-lobelia}
 
@@ -73,27 +86,38 @@
 ## Peonies {#sec-peony}
 
 - Start to grow again early March
+- Flowers in May
+- Propagate late summer
 
 ## Red-flowering currant {#sec-currant}
 
 - Start to grow again early March
+- Flowers March - April
 
-## Red valerian - herb? {#sec-valerian}
+## Red valerian {#sec-valerian}
+
+- Flowers May
 
 ## Roses {#sec-rose}
+
+- Starts to bud in May
 
 ## Rudbeckia {#sec-rudbeckia}
 
 ## Snapdragon {#sec-snapdragon}
+
+- Flowers in May
 
 ## Snowdrops {#sec-snowdrop}
 
 - Come up in Jan
 - Can lift and divide bulbs after flowering, end of March
 
-## Stevia - herb? {#sec-stevia}
+## Stevia {#sec-stevia}
 
 ## Summer snowflake, Gratiola officinalis {#sec-snowflake} 
+
+- Flowers in April
 
 ## Sunflower {#sec-sunflower}
 
@@ -103,6 +127,7 @@
 - Collect seeds once pods have gone papery brown
 - Dry pods out until splits, then dry seeds out and pack away
 - Soak 24 hours in warm water before sowing in Feb
+- Plant out late April
 
 ## Tutsan {#sec-tutsan}
 
