--- a/calendar.qmd
+++ b/calendar.qmd
@@ -35,7 +35,7 @@ ordered_months |>
   purrr::walk(\(m)
               {
                 knitr::knit_child(
-                  input = glue::glue("child-dir/_child-", m, ".qmd"),
+                  input = glue::glue("child-dir/_child-{m}.qmd"),
                   envir = environment(),
                   quiet = TRUE
                 ) |>
